resolve text not showing on dark mode

--- a/frontend/styles/events.module.css
+++ b/frontend/styles/events.module.css
@@ -155,6 +155,9 @@
   .lookout {
     color: var(--white);
   }
+  #emptyMessage {
+    color: var(--white);
+  }
 }
 
 /*---------------------------Loading Sign--------------------------*/
